--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,17 +3,34 @@
 {% block title %}Website | Home{% endblock %}
 
 {% block body %}
-    CONTENT
+    {# WORKS #}
+    <div class="uppercase absolute left-0 top-1/4 w-3/4">
+        <a href="#" class="animated group">
+            <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">My Photo Portfolio</span>
+            <hr>
+            <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">Explore Works</span>
+        </a>
+    </div>
 
+    {# CONTACT #}
+    <div class="uppercase absolute right-0 top-2/3 w-3/4">
+        <a href="#" class="animated group relative">
+            <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">How to find me</span>
+            <hr>
+            <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">Contact Me</span>
+        </a>
+    </div>
+
+    {# FOOTER #}
     <footer class="fixed bottom-0 w-full">
         <div class="flex flex-row justify-between mx-12 my-6 text-sm">
-            <ul class="flex flex-row">
-                <li class="mr-10"><a href="#">Fb</a></li>
-                <li class="mr-10"><a href="#">Tw</a></li>
-                <li class="mr-10"><a href="#">In</a></li>
-                <li><a href="#">Yt</a></li>
+            <ul class="flex flex-row font-bold">
+                <li class="mr-10"><a href="#" class="hover:text-white">Fb</a></li>
+                <li class="mr-10"><a href="#" class="hover:text-white">Tw</a></li>
+                <li class="mr-10"><a href="#" class="hover:text-white">In</a></li>
+                <li><a href="#" class="hover:text-white">Yt</a></li>
             </ul>
-            <div class="uppercase">Copyright &copy; 2020. All Rights Reserved.</div>
+            <div class="uppercase font-bold">Copyright &copy; 2020. All Rights Reserved.</div>
         </div>
     </footer>
 {% endblock %}
