Fixed text direction

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     {# WORKS #}
     <div class="uppercase absolute left-0 top-1/4 w-3/4">
-        <a href="#" class="animated group">
+        <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">My Photo Portfolio</span>
             <hr>
             <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">Explore Works</span>
@@ -13,11 +13,11 @@
     </div>
 
     {# CONTACT #}
-    <div class="uppercase absolute right-0 top-2/3 w-3/4">
-        <a href="#" class="animated group relative">
-            <span class="text-base font-bold duration-700 ease-in-out ml-56 group-hover:ml-48">How to find me</span>
+    <div class="uppercase absolute right-0 top-2/3 w-3/4 text-right">
+        <a href="#" class="group">
+            <span class="text-base font-bold duration-700 ease-in-out mr-8 group-hover:mr-16">How to find me</span>
             <hr>
-            <span class="text-4xl font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">Contact Me</span>
+            <span class="text-4xl font-bold duration-700 ease-in-out mr-32 group-hover:mr-24">Contact Me</span>
         </a>
     </div>
 
