--- a/templates/home/aligned-left.html.twig
+++ b/templates/home/aligned-left.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     {# WORKS #}
     <div class="uppercase absolute right-0 top-1/4 w-11/12">
-        <a href="#" class="animated group relative">
+        <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">My Photo Portfolio</span>
             <hr>
             <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">Explore Works</span>
@@ -14,7 +14,7 @@
 
     {# ABOUT #}
     <div class="uppercase absolute right-0 top-2/4 w-8/12">
-        <a href="#" class="animated group relative">
+        <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">Who am i</span>
             <hr>
             <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">About Me</span>
@@ -23,7 +23,7 @@
 
     {# CONTACT #}
     <div class="uppercase absolute right-0 top-3/4 w-5/12">
-        <a href="#" class="animated group relative">
+        <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">How to find me</span>
             <hr>
             <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">Contact Me</span>
