--- a/templates/home/aligned-left.html.twig
+++ b/templates/home/aligned-left.html.twig
@@ -4,29 +4,29 @@
 
 {% block body %}
     {# WORKS #}
-    <div class="uppercase absolute right-0 top-1/4 w-11/12">
+    <div class="uppercase absolute left-0 top-1/4 w-4/12 text-right">
         <a href="#" class="group">
-            <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">My Photo Portfolio</span>
+            <span class="text-base font-bold duration-700 ease-in-out mr-8 group-hover:mr-16">My Photo Portfolio</span>
             <hr>
-            <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">Explore Works</span>
+            <span class="text-4xl font-bold duration-700 ease-in-out mr-32 group-hover:mr-24">Explore Works</span>
         </a>
     </div>
 
     {# ABOUT #}
-    <div class="uppercase absolute right-0 top-2/4 w-8/12">
+    <div class="uppercase absolute left-0 top-2/4 w-7/12 text-right">
         <a href="#" class="group">
-            <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">Who am i</span>
+            <span class="text-base font-bold duration-700 ease-in-out mr-8 group-hover:mr-16">Who am i</span>
             <hr>
-            <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">About Me</span>
+            <span class="text-4xl font-bold duration-700 ease-in-out mr-32 group-hover:mr-24">About Me</span>
         </a>
     </div>
 
     {# CONTACT #}
-    <div class="uppercase absolute right-0 top-3/4 w-5/12">
+    <div class="uppercase absolute left-0 top-3/4 w-10/12 text-right">
         <a href="#" class="group">
-            <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">How to find me</span>
+            <span class="text-base font-bold duration-700 ease-in-out mr-8 group-hover:mr-16">How to find me</span>
             <hr>
-            <span class="text-4xl font-bold duration-700 ease-in-out ml-32 group-hover:ml-24">Contact Me</span>
+            <span class="text-4xl font-bold duration-700 ease-in-out mr-32 group-hover:mr-24">Contact Me</span>
         </a>
     </div>
 
