--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,6 +14,17 @@
         {% endblock %}
     </head>
     <body class="bg-black font-montserrat text-white text-opacity-50">
+        <header class="fixed top-0 w-full">
+            <div class="flex flex-row justify-between mx-12 my-6 text-sm">
+                <ul class="flex flex-row font-bold">
+                    <li class="mr-10"><a href="{{ path('home_spaced') }}" class="hover:text-white">Home</a></li>
+                    <li class="mr-10"><a href="{{ path('home_centered') }}" class="hover:text-white">Centered</a></li>
+                    <li class="mr-10"><a href="{{ path('home_aligned_left') }}" class="hover:text-white">Left</a></li>
+                    <li class="mr-10"><a href="{{ path('home_spaced_multi') }}" class="hover:text-white">Spaced</a></li>
+                    <li class="mr-10"><a href="{{ path('home_aligned_right') }}" class="hover:text-white">Right</a></li>
+                </ul>
+            </div>
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
