Added extra templated

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,6 +18,7 @@
             <div class="flex flex-row justify-between mx-12 my-6 text-sm">
                 <ul class="flex flex-row font-bold">
                     <li class="mr-10"><a href="{{ path('home_spaced') }}" class="hover:text-white">Home</a></li>
+                    <li class="mr-10"><a href="{{ path('home_shifted') }}" class="hover:text-white">Shifted</a></li>
                     <li class="mr-10"><a href="{{ path('home_centered') }}" class="hover:text-white">Centered</a></li>
                     <li class="mr-10"><a href="{{ path('home_aligned_left') }}" class="hover:text-white">Left</a></li>
                     <li class="mr-10"><a href="{{ path('home_spaced_multi') }}" class="hover:text-white">Spaced</a></li>
