Added contact page

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -12,7 +12,7 @@
     </div>
 
     <div class="uppercase absolute right-0 top-2/3 w-3/4 text-right">
-        <a href="#" class="group">
+        <a href="{{ path('app_contact') }}" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-56 group-hover:mr-64">How to find me</span>
             <hr>
             <span class="text-4xl font-bold duration-700 ease-in-out mr-80 group-hover:mr-72">Contact Me</span>
