Updated header with correct links

--- a/templates/shared/header.html.twig
+++ b/templates/shared/header.html.twig
@@ -1,12 +1,9 @@
 <header class="fixed top-0 w-full">
     <div class="flex flex-row justify-between mx-12 my-6 text-sm">
         <ul class="flex flex-row font-bold">
-            <li class="mr-10"><a href="#" class="hover:text-white">Home</a></li>
-            <li class="mr-10"><a href="#" class="hover:text-white">Shifted</a></li>
-            <li class="mr-10"><a href="#" class="hover:text-white">Centered</a></li>
-            <li class="mr-10"><a href="#" class="hover:text-white">Left</a></li>
-            <li class="mr-10"><a href="#" class="hover:text-white">Spaced</a></li>
-            <li class="mr-10"><a href="#" class="hover:text-white">Right</a></li>
+            <li class="mr-10"><a href="{{ path('app_home') }}" class="hover:text-white">Home</a></li>
+            <li class="mr-10"><a href="{{ path('app_works') }}" class="hover:text-white">Works</a></li>
+            <li class="mr-10"><a href="{{ path('app_contact') }}" class="hover:text-white">Contact</a></li>
         </ul>
     </div>
 </header>
