--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="uppercase absolute left-0 top-1/4 w-3/4">
-        <a href="#" class="group">
+        <a href="{{ path('app_works') }}" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-56 group-hover:ml-64">My Photo Portfolio</span>
             <hr>
             <span class="text-4xl font-bold duration-700 ease-in-out ml-80 group-hover:ml-72">Explore Works</span>
