Added basic structure to contact template

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,5 +3,23 @@
 {% block title %}Website | Contact{% endblock %}
 
 {% block body %}
+    <div class="py-28 mx-36 mt-36">
+        <section class="mb-36 w-full my-0 mx-auto max-w-3xl">
+            <p class=" text-center">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean porttitor ipsum mi, eu
+                elementum eros vulputate in. Phasellus sed velit ultricies, dictum ligula sed, consectetur
+                lorem. Nulla a suscipit quam. Proin mattis interdum metus ac iaculis. Nam tincidunt velit id .</p>
+        </section>
 
+        <section class="flex flex-row my-0 mx-auto max-w-3xl">
+            <div class="columns-4">Contact info</div>
+            <div class="columns-8">
+                <form action="">
+                    <input type="text" placeholder="Your Name">
+                    <input type="text" placeholder="Your Email">
+                    <textarea name=""></textarea>
+                </form>
+            </div>
+        </section>
+    </div>
 {% endblock %}
