Added message form

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -14,11 +14,7 @@
         <section class="flex flex-row my-0 mx-auto max-w-3xl">
             <div class="columns-4">Contact info</div>
             <div class="columns-8">
-                <form action="">
-                    <input type="text" placeholder="Your Name">
-                    <input type="text" placeholder="Your Email">
-                    <textarea name=""></textarea>
-                </form>
+                {{ form(contact_form) }}
             </div>
         </section>
     </div>
