--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -15,3 +15,45 @@ body:before {
     background: radial-gradient(ellipse at left top, #1E293B 0%, #000000 70%);
     z-index: -100;
 }
+
+form {
+    width: 100%;
+}
+
+input, button, textarea {
+    font-size: 14px;
+    display: inline-block;
+    transition: 0.3s;
+    padding: 15px 20px;
+    border: 2px solid #313133;
+    background-color: transparent;
+    color: #808080;
+    outline: #FFFFFF;
+    width: 100%;
+    margin-bottom: 20px;
+}
+
+input:focus, input:active, button:focus, button:active, textarea:focus, textarea:active {
+    outline: #808080;
+    border-color: #808080;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+input:hover, button:hover, textarea:hover {
+    border-color: #808080;
+    background-color: rgba(0, 0, 0, 0.5);
+}
+
+textarea {
+    resize: none;
+    height: 230px;
+}
+
+button {
+    font-weight: bold;
+    width: auto;
+    text-transform: uppercase;
+    padding: 15px 40px;
+    color: white;
+
+}
