--- a/templates/demo/home/shifted.html.twig
+++ b/templates/demo/home/shifted.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="uppercase absolute left-0 top-1/4 w-3/4">
-        <a href="{{ path('app_works') }}" class="group">
+        <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-56 group-hover:ml-64">My Photo Portfolio</span>
             <hr>
             <span class="text-4xl font-bold duration-700 ease-in-out ml-80 group-hover:ml-72">Explore Works</span>
@@ -12,7 +12,7 @@
     </div>
 
     <div class="uppercase absolute right-0 top-2/3 w-3/4 text-right">
-        <a href="{{ path('app_contact') }}" class="group">
+        <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-56 group-hover:mr-64">How to find me</span>
             <hr>
             <span class="text-4xl font-bold duration-700 ease-in-out mr-80 group-hover:mr-72">Contact Me</span>
