--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -55,5 +55,8 @@ button {
     text-transform: uppercase;
     padding: 15px 40px;
     color: white;
+}
 
+button:hover {
+    border-color: #FFFFFF;
 }
