Added back button to contact page

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     <div class="py-28 mx-44 mt-28">
-        <section class="mb-52 w-full my-0 mx-auto max-w-3xl">
+        <section class="mb-36 w-full my-0 mx-auto max-w-3xl">
             <div class="uppercase absolute left-0 top-[12.5%] w-full text-center">
                 <span class="text-base font-bold">How to find me</span>
                 <hr>
@@ -57,5 +57,13 @@
                 {{ form_end(form, {render_rest: false}) }}
             </div>
         </section>
+
+        <div class="uppercase absolute left-0 bottom-[15%] w-3/12 text-right">
+            <a href="#" class="group">
+                <span class="text-base font-bold duration-700 ease-in-out mr-40 group-hover:mr-36">Return</span>
+                <hr>
+                <span class="text-4xl font-bold duration-700 ease-in-out mr-16 group-hover:mr-24">Back</span>
+            </a>
+        </div>
     </div>
 {% endblock %}
