--- a/templates/demo/home/left-aligned.html.twig
+++ b/templates/demo/home/left-aligned.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {# WORKS #}
-    <div class="uppercase absolute left-0 top-1/4 w-4/12 text-right">
+    <div class="uppercase absolute left-0 top-1/4 w-4/12 text-right -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-80 group-hover:mr-72">My Photo Portfolio</span>
             <hr>
@@ -13,7 +13,7 @@
     </div>
 
     {# ABOUT #}
-    <div class="uppercase absolute left-0 top-2/4 w-7/12 text-right">
+    <div class="uppercase absolute left-0 top-2/4 w-7/12 text-right -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-72 group-hover:mr-64">Who am i</span>
             <hr>
@@ -22,7 +22,7 @@
     </div>
 
     {# CONTACT #}
-    <div class="uppercase absolute left-0 top-3/4 w-10/12 text-right">
+    <div class="uppercase absolute left-0 top-3/4 w-10/12 text-right -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-72 group-hover:mr-64">How to find me</span>
             <hr>
