--- a/templates/demo/home/centered.html.twig
+++ b/templates/demo/home/centered.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {# WORKS #}
-    <div class="uppercase absolute left-0 top-1/4 w-3/4">
+    <div class="uppercase absolute left-0 top-1/4 w-3/4 -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16 relative left-1/2">My Photo Portfolio</span>
             <hr>
@@ -13,7 +13,7 @@
     </div>
 
     {# CONTACT #}
-    <div class="uppercase absolute right-0 top-2/3 w-3/4 text-right">
+    <div class="uppercase absolute right-0 top-2/3 w-3/4 text-right -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-72 group-hover:mr-64 relative right-1/2">How to find me</span>
             <hr>
