--- a/templates/demo/home/right-aligned.html.twig
+++ b/templates/demo/home/right-aligned.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {# WORKS #}
-    <div class="uppercase absolute right-0 top-1/4 w-11/12">
+    <div class="uppercase absolute right-0 top-1/4 w-11/12 -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">My Photo Portfolio</span>
             <hr>
@@ -13,7 +13,7 @@
     </div>
 
     {# ABOUT #}
-    <div class="uppercase absolute right-0 top-2/4 w-8/12">
+    <div class="uppercase absolute right-0 top-2/4 w-8/12 -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">Who am i</span>
             <hr>
@@ -22,7 +22,7 @@
     </div>
 
     {# CONTACT #}
-    <div class="uppercase absolute right-0 top-3/4 w-5/12">
+    <div class="uppercase absolute right-0 top-3/4 w-5/12 -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-8 group-hover:ml-16">How to find me</span>
             <hr>
