--- a/templates/demo/home/spaced.html.twig
+++ b/templates/demo/home/spaced.html.twig
@@ -4,7 +4,7 @@
 
 {% block body %}
     {# WORKS #}
-    <div class="uppercase absolute left-0 top-1/4 w-3/4">
+    <div class="uppercase absolute left-0 top-1/4 w-3/4 -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-24 group-hover:ml-32">My Photo Portfolio</span>
             <hr>
@@ -13,7 +13,7 @@
     </div>
 
     {# ABOUT #}
-    <div class="uppercase absolute right-[12.5%] top-2/4 w-3/4 text-center">
+    <div class="uppercase absolute right-[12.5%] top-2/4 w-3/4 text-center -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-64 group-hover:mr-52">Who am i</span>
             <hr>
@@ -22,7 +22,7 @@
     </div>
 
     {# CONTACT #}
-    <div class="uppercase absolute right-0 top-3/4 w-3/4 text-right">
+    <div class="uppercase absolute right-0 top-3/4 w-3/4 text-right -z-10">
         <a href="#" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-80 group-hover:mr-72">How to find me</span>
             <hr>
