--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Website | Home{% endblock %}
 
 {% block body %}
-    <div class="uppercase absolute left-0 top-1/4 w-3/4">
+    <div class="uppercase absolute left-0 top-1/4 w-3/4 -z-10">
         <a href="{{ path('app_works') }}" class="group">
             <span class="text-base font-bold duration-700 ease-in-out ml-56 group-hover:ml-64">My Photo Portfolio</span>
             <hr>
@@ -11,7 +11,7 @@
         </a>
     </div>
 
-    <div class="uppercase absolute right-0 top-2/3 w-3/4 text-right">
+    <div class="uppercase absolute right-0 top-2/3 w-3/4 text-right -z-10">
         <a href="{{ path('app_contact') }}" class="group">
             <span class="text-base font-bold duration-700 ease-in-out mr-56 group-hover:mr-64">How to find me</span>
             <hr>
