--- a/templates/demo/contact/inline.html.twig
+++ b/templates/demo/contact/inline.html.twig
@@ -4,11 +4,18 @@
 
 {% block body %}
     <div class="py-28 mx-44 mt-28">
-        <section class="mb-36 w-full my-0 mx-auto max-w-3xl">
-            <div class="uppercase absolute left-0 top-[12.5%] w-full text-center">
+        <section class="mb-36 w-full my-0 mx-auto max-w-3xl flex flex-row">
+            <div class="uppercase absolute left-0 top-[12.5%] w-1/2 text-center">
                 <span class="text-base font-bold">How to find me</span>
                 <hr>
                 <span class="text-4xl font-bold">Contact Me</span>
+            </div>
+            <div class="uppercase absolute right-0 top-[12.5%] w-1/2 text-center">
+                <a href="#" class="group">
+                    <span class="text-base font-bold duration-700 ease-in-out mr-44 group-hover:mr-40">Return</span>
+                    <hr>
+                    <span class="text-4xl font-bold duration-700 ease-in-out mr-16 group-hover:mr-24">Back</span>
+                </a>
             </div>
         </section>
 
@@ -45,13 +52,5 @@
                 </div>
             </div>
         </section>
-
-        <div class="uppercase absolute left-0 bottom-[15%] w-3/12 text-right">
-            <a href="#" class="group">
-                <span class="text-base font-bold duration-700 ease-in-out mr-40 group-hover:mr-36">Return</span>
-                <hr>
-                <span class="text-4xl font-bold duration-700 ease-in-out mr-16 group-hover:mr-24">Back</span>
-            </a>
-        </div>
     </div>
 {% endblock %}
