Added contact page template "aligned"

--- a/templates/demo/base.html.twig
+++ b/templates/demo/base.html.twig
@@ -36,6 +36,7 @@
                     <a>Contact</a>
                     <div class="dropdown-content">
                         <a href="{{ path('app_demo_contact_dropped') }}">Dropped</a>
+                        <a href="{{ path('app_demo_contact_aligned') }}">Aligned</a>
                         <a href="{{ path('app_demo_contact_inline') }}">Inline</a>
                     </div>
                 </div>
