Fixed z-index on contact templates

--- a/templates/demo/contact/aligned.html.twig
+++ b/templates/demo/contact/aligned.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <div class="py-28 mx-44 mt-28">
         <section class="mb-36 w-full my-0 mx-auto max-w-3xl">
-            <div class="uppercase absolute left-0 top-[12.5%] w-full text-center">
+            <div class="uppercase absolute left-0 top-[12.5%] w-full text-center -z-10">
                 <span class="text-base font-bold">How to find me</span>
                 <hr>
                 <span class="text-4xl font-bold">Contact Me</span>
@@ -46,7 +46,7 @@
             </div>
         </section>
 
-        <div class="uppercase absolute left-0 bottom-[20%] w-3/12 text-right">
+        <div class="uppercase absolute left-0 bottom-[20%] w-3/12 text-right -z-10">
             <a href="#" class="group">
                 <span class="text-base font-bold duration-700 ease-in-out mr-40 group-hover:mr-36">Return</span>
                 <hr>
