--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -59,7 +59,7 @@
         </section>
 
         <div class="uppercase absolute left-0 bottom-[15%] w-3/12 text-right">
-            <a href="#" class="group">
+            <a href="{{ path('app_home') }}" class="group">
                 <span class="text-base font-bold duration-700 ease-in-out mr-40 group-hover:mr-36">Return</span>
                 <hr>
                 <span class="text-4xl font-bold duration-700 ease-in-out mr-16 group-hover:mr-24">Back</span>
