--- a/templates/works/index.html.twig
+++ b/templates/works/index.html.twig
@@ -3,5 +3,64 @@
 {% block title %}Hello WorksController!{% endblock %}
 
 {% block body %}
-    <h1>Works</h1>
+    <div class="py-28 mx-16">
+        <section class="mb-36 w-full my-0 mx-auto max-w-3xl">
+            <div class="uppercase absolute left-0 top-[12.5%] w-full text-center">
+                <span class="text-base font-bold">My photo portfolio</span>
+                <hr>
+                <span class="text-4xl font-bold">Explore works</span>
+            </div>
+        </section>
+        <section class="flex flex-row w-full h-52 justify-center">
+            {% include 'shared/album.html.twig' with {
+                'tag': 'animals',
+                'image': 'https://www.iata.org/contentassets/d7c512eb9a704ba2a8056e3186a31921/cargo_live_animals_parrot.jpg'
+            } only %}
+
+            {% include 'shared/album.html.twig' with {
+                'tag': 'people',
+                'image': 'https://www.incimages.com/uploaded_files/image/1920x1080/getty_517194189_373099.jpg'
+            } only %}
+
+            {% include 'shared/album.html.twig' with {
+                'tag': 'fantasy',
+                'image': 'https://image.shutterstock.com/image-photo/butterfly-grass-on-meadow-night-260nw-1111729556.jpg'
+            } only %}
+
+            {% include 'shared/album.html.twig' with {
+                'tag': 'elves',
+                'image': 'https://static.wikia.nocookie.net/thecreatureworldcc/images/d/d1/Elf.jpg'
+            } only %}
+
+            {% include 'shared/album.html.twig' with {
+                'tag': 'sky-whale',
+                'image': 'https://i.pinimg.com/originals/41/48/8a/41488a9eaf86e27f0a149d21b59faa3c.jpg'
+            } only %}
+        </section>
+        <section class="masonry pt-16">
+            <div class="grid">
+                {% set big_array = [4, 8, 3, 5, 8, 9] %}
+                {% set count = 0 %}
+                {% set compare = 0 %}
+
+                {% for key in 0..36 %}
+                    {% if key == compare %}
+                        <div class="grid-item span-2">
+                            <img src="https://picsum.photos/seed/{{ key }}/400" alt="">
+                        </div>
+                        {% set compare = compare + big_array[count] %}
+                        {% set count = count + 1 %}
+                    {% else %}
+                        <div class="grid-item">
+                            <img src="https://picsum.photos/seed/{{ key }}/200" alt="">
+                        </div>
+                    {% endif %}
+
+                    {% if count > 5 %}
+                        {% set count = 0 %}
+                    {% endif %}
+                {% endfor %}
+            </div>
+        </section>
+    </div>
 {% endblock %}
