--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -14,10 +14,12 @@
         <script src="{{ asset('feather.min.js') }}"></script>
     {% endblock %}
 </head>
-<body class="bg-black font-montserrat text-white text-opacity-50">
+<body class="bg-black font-montserrat text-white text-opacity-50 flex flex-col">
     {% include 'shared/header.html.twig' %}
     {% block body %}{% endblock %}
-    {% include 'shared/footer.html.twig' %}
+    {% block footer %}
+        {% include 'shared/fixed-footer.html.twig' %}
+    {% endblock%}
 
     <script>
         feather.replace()
