--- a/templates/shared/header.html.twig
+++ b/templates/shared/header.html.twig
@@ -1,4 +1,4 @@
-<header class="fixed top-0 w-full">
+<header class="w-full">
     <div class="flex flex-row justify-between mx-12 my-6 text-sm">
         <ul class="flex flex-row font-bold">
             <li class="mr-10"><a href="{{ path('app_home') }}" class="hover:text-white">Home</a></li>
