--- a/templates/works/index.html.twig
+++ b/templates/works/index.html.twig
@@ -62,6 +62,20 @@
                 {% endfor %}
             </div>
         </section>
+
+        <div class="uppercase fixed left-0 bottom-[8%] w-3/12 text-right bg-black bg-opacity-80 rounded-2xl group hover:bg-opacity-100">
+            <a href="{{ path('app_home') }}">
+                <span class="text-base font-bold duration-700 ease-in-out mr-40 delay-75 group-hover:mr-36">Return</span>
+                <hr>
+                <span class="text-4xl font-bold duration-700 ease-in-out mr-16 delay-75 group-hover:mr-24">Back</span>
+            </a>
+        </div>
+
+        <div class="uppercase fixed right-0 bottom-[8%] w-1/12 bg-black bg-opacity-80 rounded-2xl group hover:bg-opacity-100 py-3">
+            <a href="#">
+                <span class="text-4xl font-bold duration-700 ease-in-out ml-8 delay-75 group-hover:ml-12">Up</span>
+            </a>
+        </div>
     </div>
 {% endblock %}
 
