--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}Welcome!{% endblock %}</title>
-    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text></svg>">
+    <meta name="theme-color" content="#ffffff">
+    <title>Website | {% block title %}Welcome!{% endblock %}</title>
+    <link rel="apple-touch-icon" sizes="144x144" href="{{ asset('image/apple-touch-icon.png') }}">
+    <link rel="icon" type="image/png" sizes="32x32" href="{{ asset('image/favicon-32x32.png') }}">
+    <link rel="icon" type="image/png" sizes="16x16" href="{{ asset('image/favicon-16x16.png') }}">
+    <link rel="manifest" href="{{ asset('image/site.webmanifest') }}">
+    <link rel="mask-icon" href="{{ asset('image/safari-pinned-tab.svg') }}" color="#5bbad5">
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
@@ -15,10 +20,17 @@
     {% endblock %}
 </head>
 <body class="bg-black font-montserrat text-white text-opacity-50 flex flex-col">
+    <header>
+        <a href="#" class="absolute top-3 left-4">
+            <img src="{{ asset('image/logo.png') }}" class="h-10" alt="Logo">
+        </a>
+
+        <a href="#" class="absolute top-5 right-4"><i data-feather="menu"></i></a>
+    </header>
     {% block body %}{% endblock %}
-    {% block footer %}
-        {% include 'shared/fixed-footer.html.twig' %}
-    {% endblock%}
+{#    {% block footer %}#}
+{#        {% include 'shared/fixed-footer.html.twig' %}#}
+{#    {% endblock%}#}
 
     <script>
         feather.replace()
