--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -20,6 +20,8 @@
     {% endblock %}
 </head>
 <body class="bg-black font-montserrat text-white text-opacity-50 flex flex-col">
+    {# TODO: Make header response #}
+    {# TODO: Move header to own file/block #}
     <header>
         <a href="#" class="absolute top-3 left-4">
             <img src="{{ asset('image/logo.png') }}" class="h-10" alt="Logo">
@@ -28,6 +30,8 @@
         <a href="#" class="absolute top-5 right-4"><i data-feather="menu"></i></a>
     </header>
     {% block body %}{% endblock %}
+    {# TODO: Make footer response #}
+    {# TODO: Move footer to own file/block #}
 {#    {% block footer %}#}
 {#        {% include 'shared/fixed-footer.html.twig' %}#}
 {#    {% endblock%}#}
