--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Contact{% endblock %}
 
 {% block body %}
-    <div class="uppercase text-center font-bold mt-12 mb-8 md:mb-24">
+    <div class="uppercase text-center font-bold mt-12 mb-8 md:mb-24 md:mt-28">
         <h2>How to find me</h2>
         <hr>
         <h1 class="text-4xl">Contact Me</h1>
