--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -20,18 +20,18 @@
                 <i data-feather="chevron-left"></i>
             </div>
 
-            {% for tag in 0..5 %}
-                {# Album/Tag TODO: Move to own file#}
-                <section class="flex grow-0 shrink-0 basis-auto items-center justify-center w-80 h-52 mx-4 relative">
+            {% for tag in tags %}
+                {# Album/Tag TODO: Move to own file #}
+                <section class="flex grow-0 shrink-0 basis-auto items-center justify-center w-80 h-52 mx-4 relative max-w-full">
                     <div class="w-full h-full bg-white border-4 border-white -rotate-4 absolute shadow-md shadow-black"></div>
                     <div class="w-full h-full bg-white border-4 border-white -rotate-2 absolute shadow-md shadow-black"></div>
                     <a href="#" draggable="false" class="w-full h-full absolute active:cursor-grabbing">
                         <div class="w-full h-full bg-white border-4 border-white rotate-0 absolute shadow-md shadow-black">
-                            <img class="w-full h-full" draggable="false" src="https://i.pinimg.com/originals/41/48/8a/41488a9eaf86e27f0a149d21b59faa3c.jpg" alt="Sky whale">
+                            <img class="w-full h-full" draggable="false" src="{{ tag.url }}" alt="{{ tag.name|replace({'-': ' '}) }}">
                         </div>
                         <span class="bg-white w-11/12 h-10 absolute left-0 flex justify-end items-center pr-5 shadow-md shadow-gray-500 top-1/2 -translate-y-1/2
                             text-black text-opacity-50 font-bold uppercase text-right">
-                        Lorem Ipsum
+                        {{ tag.name|replace({'-': ' '}) }}
                     </span>
                     </a>
                 </section>
@@ -42,13 +42,20 @@
             </div>
         </section>
 
-        <section class="px-12 mt-16">
-            Masonry
+        <section class="px-5 mt-16 grid gap-5 grid-cols-1 md:grid-cols-2 lg:grid-cols-4 xl:grid-cols-8">
+            {# TODO: Make auto loading/infinite scroll to save data #}
+            {# TODO: Add back to top button #}
+            {# TODO: Add restore scroll position button #}
+            {% for image in images %}
+                <div class="rounded shadow-md shadow-black {% if image.large %}md:col-span-2 md:row-span-2{% endif %}">
+                    <img src="{{ image.url }}" class="w-full h-full rounded" alt="">
+                </div>
+            {% endfor %}
         </section>
     </main>
 
     <footer class="mt-4 mb-8 px-4 flex flex-col text-center w-full
-            md:absolute md:bottom-0 md:flex-row md:mb-0 md:justify-between">
+            md:flex-row md:mb-0 md:justify-between">
         <div class="flex flex-row justify-center mb-8">
             <a href="#" class="hover:text-white mx-5"><i data-feather="facebook"></i></a>
             <a href="#" class="hover:text-white mx-5"><i data-feather="twitter"></i></a>
