Fixed contact page margin between text and form

--- a/templates/contact/index.html.twig
+++ b/templates/contact/index.html.twig
@@ -11,7 +11,7 @@
 
     <main class="max-w-5xl m-auto px-4 my-8
             md:flex md:flex-row">
-        <div class="mb-16 md:w-1/2">
+        <div class="mb-16 mr-8 md:w-1/2">
             <h3 class="hidden md:block text-3xl mb-5 w-full uppercase">
                 <span class="text-xs block">Who am i?</span>
                 <span class="text-white font-bold block">About me</span>
